--- a/styles/portafolio.css
+++ b/styles/portafolio.css
@@ -16,12 +16,14 @@
 /* header */
 header{
     background-color: #343435;
-    box-shadow: rgba(20, 20, 22, 0.2) 0px 7px 29px 0px;
     padding: 25px 0;
     position: fixed;
     width: 100%;
-    top: 0;
+    top: 0px;
     visibility: hidden;
+}
+.head{
+    background-color: #343435;
 }
  .div-nav{
     width: 100%;
@@ -38,7 +40,6 @@ header{
 }
  .linked{
     color:#ffffff; 
-    transition: 0.2s;
     letter-spacing: 4px;
     padding: 0 30px;
     line-height: 2.5;
@@ -48,6 +49,7 @@ header{
     background-color: #d43b69;
     color:#252525; 
     box-shadow: 0 0 10px #d43b69, 0 0 40px #d43b69, 0 0 90px #d43b69;
+    transition: 100ms linear;
 }
  .selected{
     color:#ffffff; 
@@ -58,6 +60,7 @@ header{
     background-color: #d43b69;
     color:#252525; 
     box-shadow: 0 0 10px #d43b69, 0 0 40px #d43b69, 0 0 90px #d43b69;
+    transition: 100ms linear;
 }
 .list-nav a {
    text-decoration: none;
@@ -73,7 +76,7 @@ header{
 .presentation{
     background-color: #252525;
     padding: 80px 20px 80px;
-    margin: 60px 0 0;
+    margin: 0;
     justify-content: center;
     align-items: center; 
 }
@@ -126,6 +129,9 @@ header{
 }
 /* media queries*/
 @media (min-width: 1100px) {
+    .presentation{
+        top: 60 0 0;
+    }
     .presentation-container{
         display: flex;
         flex-direction: row;
@@ -150,7 +156,8 @@ header{
     flex-direction: column;
     text-align: center;
     justify-content: space-around;
-    background-color: #dde1e7;
+    background-color: #252525;
+    color: #ffffff;
     display: flex;
     flex-wrap: wrap;
     padding: 110px 40px 130px;
@@ -168,15 +175,13 @@ header{
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    border-radius: 8px;
-    background-color:#dde1e7;
+    background-color:#252525;
+    justify-content: center;
+    color: #ffffff;
     padding: 25px;
     margin: 10px;
     width: 260px;  
     height: 200px;
-    justify-content: space-evenly;  
-    box-shadow: inset -10px -10px 15px #ffffff80, 
-    inset 10px 10px 15px rgba(70, 70, 70, 0.12); 
 }
 .grid-container{
     display: flex;
@@ -192,8 +197,9 @@ header{
     font-weight: 700;
 }
 .grid-buttons:hover {
-    box-shadow: -5px -5px 9px rgba(255,255,255,0.45), 5px 5px 9px rgba(94,104,121,0.3);
-    color: #a7a8aa;
+    border: 2px solid #32a3ee; 
+    box-shadow: inset 0 0 0.5em #32a3ee, 0 0 0.5em #32a3ee;
+    transition: 100ms linear; 
 }
 /* media queries*/
 @media (max-width: 350px) {
@@ -262,38 +268,7 @@ header{
     width: 100%;
     padding: 60px 30px 40px;
     flex-direction: column;
-    background-color: #13151c;
-}
-blockquote{
-    margin: 30px 40px;
-    font-size: 20px;
-}
-.someone{
-    margin-top: 50px;
-    color: #ffffff;
-}
-/*media queries*/
-@media (max-width: 700px){
-    .quote-section{
-        padding: 80px 20px;
-        width: 100%;
-    }
-}
-/* quote */
-.quote-content{
-    padding: 110px 40px 130px ;
-    justify-content: center;
-    text-align: center;
-    color: white;
-    font-size: 25px;
-    position: relative;
-}
-.quote-section{
-    display: flex;
-    width: 100%;
-    padding: 60px 30px 40px;
-    flex-direction: column;
-    background-color: #13151c;
+    background-color: #343435;
 }
 blockquote{
     margin: 30px 40px;
@@ -313,7 +288,8 @@ blockquote{
 /* projects */
 .projects-box-grid{
     padding: 140px 60px 130px;
-    background-color: #dde1e7;
+    color: #ffffff;
+    background-color: #252525;
     width: 100%;
   }
 .projects-grid{
@@ -332,32 +308,33 @@ blockquote{
 }
 .projects-box {
     border-radius: 8px;
-    background-color:#dde1e7;
+    background-color:#252525;
+    color: #ffffff;
     padding: 25px; 
     text-decoration: none;
-  
     max-width: 400px;
     max-height: 360px;
     justify-content: center;
     display: flex;
     align-items: center;
     text-align: center;
-    box-shadow: inset -5px -5px 9px rgba(255,255,255,0.45), inset 5px 5px 9px rgba(94,104,121,0.3);
 }
 .projects-box:hover
 {
-    box-shadow: -5px -5px 9px rgba(255,255,255,0.45), 5px 5px 9px rgba(94,104,121,0.3);
+    border: 2px solid #7b1df7; 
+    box-shadow: inset 0 0 0.5em #7b1df7, 0 0 0.5em #7b1df7;
+    transition: 100ms linear; ;
 }
 .projects-box:hover .project-title{
-    color: #a7a8aa;
+    color: #ffffff;
 }
 .projects-box a{
     text-decoration: none;
-    color: #000000;
     justify-content: center;
     display: flex;
     align-items: center;
     flex-direction: column;
+    color: #ffffff;
 }
 .projects-box img{
     width: 80%;
@@ -386,6 +363,7 @@ blockquote{
     width: 100%;
     display: flex;
     justify-content: center;
+    background-color: #252525;
 }
 .contact-box-section{
     display: flex;
@@ -399,9 +377,7 @@ blockquote{
     flex-direction: column;
     text-align: left;
     padding: 80px 60px; 
-    background-color: #ecedf0;
-    box-shadow: -5px -5px 9px rgba(255,255,255,0.45), 5px 5px 9px rgba(94,104,121,0.3);
-    border-radius: 15px;
+    background-color: #343435;
     justify-content: space-evenly;
     width: 100%;
 }
