--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,7 +15,7 @@
 }
 /* header */
 header{
-    background-color: #000000;
+    background-color: #f27db1;
     padding: 20px 0;
     position: fixed;
     width: 100%;
@@ -43,6 +43,7 @@ header{
 /* greetings */
 .presentation{
   padding: 180px 20px 80px;
+  background-color: #a0cecc;
 }
 .presentation-container{
   display: flex;
@@ -58,21 +59,91 @@ header{
   margin-bottom: 40px;
 }
 .nickname{
+  font-family: 'IM Fell Great Primer', serif;
   margin: 15px 0;
   font-size: 40px;
   font-weight: 900;
 }
 .greetings{
+  font-family: 'IM Fell Great Primer', serif;
   font-size: 25px;
 }
 .presentation-image{
   margin: 40px 0 80px;
   display: flex;
   justify-content: center;
-  width: 80%;
+  width: 40%;
+}
+/*queries*/
+@media (min-width: 551px) {
+  .nickname{
+    margin: 15px 0;
+    font-size: 50px;
+  }
 }
 @media (min-width: 1100px) {
   .presentation{
     padding: 120px 20px 80px;
   }
 }
+/*heart background*/
+/* #heart-container{
+  position: absolute; 
+  left: 50%;
+  top: 50%; 
+}
+.heart{
+  position: absolute;
+  top: 5px; 
+  width: 50px;
+  animation: grow 3s linear infinite;
+} 
+@keyframes grow{
+  0% {transform: scale(0); z-index: 100;}
+  20% {transform: scale(20);z-index: 90;}
+  30% {transform: scale(40);z-index: 70;}
+  40% {transform: scale(60);z-index: 50;}
+  50% {transform: scale(80);z-index: 1;}
+  60% {transform: scale(100);z-index: 0;}
+  70% {transform: scale(120);z-index: -1;}
+  80% {transform: scale(140);z-index: -50;}
+} 
+
+svg:nth-child(1).heart{ 
+}
+svg:nth-child(2).heart{
+  animation-delay: .25s;
+}
+svg:nth-child(3).heart{
+  animation-delay: .50s;
+}
+svg:nth-child(4).heart{
+  animation-delay: .75s;
+}
+svg:nth-child(5).heart{
+  animation-delay: 1s;
+}
+svg:nth-child(6).heart{
+  animation-delay: 1.25s;
+}
+svg:nth-child(7).heart{
+  animation-delay: 1.50s;
+}
+svg:nth-child(8).heart{
+  animation-delay: 1.75s;
+}
+svg:nth-child(9).heart{
+  animation-delay: 2s;
+}
+svg:nth-child(10).heart{
+  animation-delay: 2.25s;
+}
+svg:nth-child(11).heart{
+  animation-delay: 2.50s;
+}
+svg:nth-child(12).heart{
+  animation-delay: 2.75s;
+}
+svg:nth-child(13).heart{
+  animation-delay: 3s;
+} */
