--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,7 +1,6 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: 'Fragment Mono', monospace;
     box-sizing: border-box;
 }
 /*titles*/
@@ -59,13 +58,14 @@ header{
   margin-bottom: 40px;
 }
 .nickname{
-  font-family: 'IM Fell Great Primer', serif;
+  font-family: 'Mochido', sans-serif;
+  color: #f27db1;                                   
   margin: 15px 0;
   font-size: 40px;
   font-weight: 900;
 }
 .greetings{
-  font-family: 'IM Fell Great Primer', serif;
+  font-family: 'Mochido', sans-serif;
   font-size: 25px;
 }
 .presentation-image{
