--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,6 +13,10 @@
     margin: 30px 0;
 }
 /* header */
+@font-face {
+  font-family: 'Borel';
+  src: url("/fonts/Borel/ttf/Borel-Regular.ttf");
+}
 header{
     background-color: #f27db1;
     padding: 20px 0;
@@ -20,6 +24,8 @@ header{
     width: 100%;
     top: 0px;
     display: none;
+    font-family: 'Borel';
+
 }
 .list-nav{
    list-style: none;
