--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,10 +13,6 @@
     margin: 30px 0;
 }
 /* header */
-@font-face {
-  font-family: 'Borel';
-  src: url("/fonts/Borel/ttf/Borel-Regular.ttf");
-}
 header{
     background-color: #f27db1;
     padding: 20px 0;
@@ -24,8 +20,6 @@ header{
     width: 100%;
     top: 0px;
     display: none;
-    font-family: 'Borel';
-
 }
 .list-nav{
    list-style: none;
@@ -64,7 +58,7 @@ header{
   margin-bottom: 40px;
 }
 .nickname{
-  font-family: 'Mochido', sans-serif;
+  font-family: 'Vanilla', sans-serif;
   color: #f27db1;                                   
   margin: 15px 0;
   font-size: 40px;
