--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,149 +1,88 @@
+
 *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 /*titles*/
 .title-section{
-    font-size: 60px;
-    margin: 30px 0;
+  font-size: 40px;
+  margin: 30px 0;
 }
 /*descriptions*/
 .description-of-section{
-    margin: 30px 0;
+  margin: 30px 0;
 }
 /* header */
 header{
-    background-color: #f27db1;
-    padding: 20px 0;
-    position: fixed;
-    width: 100%;
-    top: 0px;
-    display: none;
+  font-family: 'Lakki Reddy', cursive;
+  background-color: #a0cecc;
+  padding: 10px 0 0;
+  position: fixed;
+  width: 100%;
+  display: none;
 }
 .list-nav{
-   list-style: none;
-   display: flex;
-   justify-content: flex-end;
+ list-style: none;
+ display: flex;
+ justify-content: flex-end;
 }
 .linked{
-   color:#ffffff; 
-   letter-spacing: 4px;
-   padding: 0 30px;
-   line-height: 2.5;
-   font-weight: 300;
-   text-decoration: none;
+ color:#ffffff; 
+ letter-spacing: 3px;
+ padding: 0 30px;
+ line-height: 2.5;
+ font-weight: 300;
+ text-decoration: none;
+ display: flex;
+ text-align: center;
 }
 @media (min-width: 1100px) {
-  header{
-      display:inline;
-  }
+header{
+    display:inline;
+}
 }
 /* greetings */
-.presentation{
+.profile{
+  background-color: #bee0df;
   padding: 180px 20px 80px;
-  background-color: #a0cecc;
 }
 .presentation-container{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
 }
 .presentation-text{
-  text-align: center;
+text-align: center;
 }
-.greetings-description{
-  font-size: 16px;
-  margin-bottom: 40px;
+.greetings-text{
+font-size: 16px;
+margin-bottom: 40px;
 }
-.nickname{
-  font-family: 'Vanilla', sans-serif;
-  color: #f27db1;                                   
-  margin: 15px 0;
-  font-size: 40px;
-  font-weight: 900;
+.nickname{                                
+margin: 15px 0;
+font-size: 70px;
+font-weight: 900;
 }
 .greetings{
-  font-family: 'Mochido', sans-serif;
-  font-size: 25px;
+font-size: 25px;
 }
 .presentation-image{
-  margin: 40px 0 80px;
-  display: flex;
-  justify-content: center;
-  width: 40%;
+margin: 40px 0 80px;
+display: flex;
+justify-content: center;
+width: 40%;
 }
 /*queries*/
 @media (min-width: 551px) {
-  .nickname{
-    margin: 15px 0;
-    font-size: 50px;
-  }
+.nickname{
+  margin: 15px 0;
+  font-size: 50px;
+}
 }
 @media (min-width: 1100px) {
-  .presentation{
-    padding: 120px 20px 80px;
-  }
+.presentation{
+  padding: 120px 20px 80px;
 }
-/*heart background*/
-/* #heart-container{
-  position: absolute; 
-  left: 50%;
-  top: 50%; 
 }
-.heart{
-  position: absolute;
-  top: 5px; 
-  width: 50px;
-  animation: grow 3s linear infinite;
-} 
-@keyframes grow{
-  0% {transform: scale(0); z-index: 100;}
-  20% {transform: scale(20);z-index: 90;}
-  30% {transform: scale(40);z-index: 70;}
-  40% {transform: scale(60);z-index: 50;}
-  50% {transform: scale(80);z-index: 1;}
-  60% {transform: scale(100);z-index: 0;}
-  70% {transform: scale(120);z-index: -1;}
-  80% {transform: scale(140);z-index: -50;}
-} 
-
-svg:nth-child(1).heart{ 
-}
-svg:nth-child(2).heart{
-  animation-delay: .25s;
-}
-svg:nth-child(3).heart{
-  animation-delay: .50s;
-}
-svg:nth-child(4).heart{
-  animation-delay: .75s;
-}
-svg:nth-child(5).heart{
-  animation-delay: 1s;
-}
-svg:nth-child(6).heart{
-  animation-delay: 1.25s;
-}
-svg:nth-child(7).heart{
-  animation-delay: 1.50s;
-}
-svg:nth-child(8).heart{
-  animation-delay: 1.75s;
-}
-svg:nth-child(9).heart{
-  animation-delay: 2s;
-}
-svg:nth-child(10).heart{
-  animation-delay: 2.25s;
-}
-svg:nth-child(11).heart{
-  animation-delay: 2.50s;
-}
-svg:nth-child(12).heart{
-  animation-delay: 2.75s;
-}
-svg:nth-child(13).heart{
-  animation-delay: 3s;
-} */
