--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,7 +16,7 @@
 /* header */
 header{
   font-family: 'Lakki Reddy', cursive;
-  background-color: #a0cecc;
+  background-color: #6d87d1;
   padding: 10px 0 0;
   position: fixed;
   width: 100%;
@@ -28,7 +28,7 @@ header{
  justify-content: flex-end;
 }
 .linked{
- color:#ffffff; 
+color: #2a3261;
  letter-spacing: 3px;
  padding: 0 30px;
  line-height: 2.5;
@@ -44,7 +44,7 @@ header{
 }
 /* greetings */
 .profile{
-  background-color: #bee0df;
+  background-color: #bac9e8;
   padding: 180px 20px 80px;
 }
 .presentation-container{
@@ -59,14 +59,26 @@ text-align: center;
 .greetings-text{
 font-size: 16px;
 margin-bottom: 40px;
+font-family: 'Lakki Reddy', cursive;
+display: flex;
+text-align: center;
+line-height: 15px;
 }
-.nickname{                                
-margin: 15px 0;
+.nickname{ 
+-webkit-text-fill-color: #de2082;
+-webkit-text-stroke: 1px #c91267;
+text-shadow: -4px -4px 0px #ece78c, 4px -4px 0px #ece78c, -4px 4px 0px #ece78c, 4px 4px 0px #ece78c;
+font-family: 'Galindo', cursive;                              
 font-size: 70px;
 font-weight: 900;
+letter-spacing: -5px;
+display: flex;
+text-align: center;
+line-height: 70px;
 }
 .greetings{
 font-size: 25px;
+font-family: 'Galindo', cursive;
 }
 .presentation-image{
 margin: 40px 0 80px;
@@ -78,11 +90,21 @@ width: 40%;
 @media (min-width: 551px) {
 .nickname{
   margin: 15px 0;
-  font-size: 50px;
+  font-size: 90px;
+  margin: 15px 0 0;
 }
+.greetings{
+  margin-bottom: -10px;
+  margin-left: -190px;
+  }
+.greetings-text{
+  margin-top: 10px;
+  }
 }
 @media (min-width: 1100px) {
 .presentation{
   padding: 120px 20px 80px;
 }
 }
+margin-bottom: -20PX;
+margin-left: -50PX;
