--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,3 @@
-
 *{
 margin: 0;
 padding: 0;
@@ -10,19 +9,12 @@ font-size: 40px;
 margin: 30px 0;
 }
 /*descriptions*/
-.description-of-section{
-margin: 30px 0;
-}
 /* header */
-header{
+.header{
 font-family: 'Spicy Rice', cursive;
 background-color: #9f91ec;
 padding: 5px 0 5px;
-position: fixed;
-width: 100%;
-display: none;
--webkit-box-shadow: 0px 15px 29px -1px rgba(0,0,0,0.23);
--moz-box-shadow: 0px 15px 29px -1px rgba(0,0,0,0.23);
+position: sticky;
 box-shadow: 0px 15px 29px -1px rgba(0,0,0,0.23);
 }
 .list-nav{
@@ -41,11 +33,7 @@ text-decoration: none;
 display: flex;
 text-align: center;
 }
-@media (min-width: 1100px) {
-header{
-    display:inline;
-}
-}
+
 /* greetings */
 .profile{
 padding: 140px 20px 80px;
@@ -55,7 +43,6 @@ flex-grow: 2 2;
 flex-direction: column;
 align-items: center;
 background-image: url(/images/0a0aefa311b128f4c712225725b7da832.jpg);
-
 }
 .presentation-container{
 display: flex;
@@ -138,7 +125,14 @@ width: 40%;
 .habilities,
 .grid-container{
   background-color: #f7b585;
-
+  font-family: 'Sofia', cursive;
+}
+.habilities{
+  display: flex;
+  flex-grow: 1;
+  text-align: center;
+  justify-content: center;
+  padding: 110px 40px 130px;
 }
 
 /*quote section*/
@@ -156,13 +150,50 @@ flex-grow: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  text-align: center;
+
   color: #ff0000;
   -webkit-text-stroke: .5px #ff3535;
   text-shadow: -2px -2px 0px #fa6666, 2px -2px 0px #fa6666, -2px 2px 0px #fa6666, 2px 2px 0px #fa6666;
   font-family: 'Spicy Rice', cursive;
   font-size: 50px;
 }
+.grid-container{
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+}
+.big-buttons-for-skills{ 
+  width: 80%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.grid-buttons{
+  padding: 30px;  
+  margin: 0 0 3%;
+  background-color: #7963f7;
+  display: flex;
+  flex: 0 2;
+  width: 260px;
+  flex-direction: column;
+  align-items: center; 
+}
+@media (min-width: 600px){
+  .grid-buttons{
+    flex: 0 1 260px;
+  }
+}
+@media (min-width: 920px){
+  .grid-buttons{
+  }
+}
+@media (min-width: 1100px){
+  .grid-buttons{
+  }
+}
+
 /* #heart-container{
   z-index: -100;
   position: absolute;
@@ -222,7 +253,6 @@ svg:nth-child(12).heart{
 svg:nth-child(13).heart{
   animation-delay: 3s;
 } */
-*/
 /*footer*/
 .footer{
 background-color: #9f91ec;
