--- a/styles/styles.css
+++ b/styles/styles.css
@@ -15,6 +15,8 @@ font-family: 'Spicy Rice', cursive;
 background-color: #9f91ec;
 padding: 5px 0 5px;
 position: sticky;
+top: 0;
+width: 100%;
 box-shadow: 0px 15px 29px -1px rgba(0,0,0,0.23);
 }
 .list-nav{
