--- a/styles/styles.css
+++ b/styles/styles.css
@@ -262,7 +262,7 @@ svg:nth-child(12).heart{
 }
 svg:nth-child(13).heart{
   animation-delay: 3s;
-} */
+} 
 /*footer*/
 .footer{
 background-color: #9f91ec;
