--- a/styles/styles.css
+++ b/styles/styles.css
@@ -49,7 +49,7 @@ display: flex;
 flex-grow: 2 2;
 flex-direction: column;
 align-items: center;
-background-image: url(/images/0a0aefa311b128f4c712225725b7da832.jpg);
+background-image: url(/images/firebackground01_adobe_express.svg);
 }
 .presentation-container{
 display: flex;
@@ -181,6 +181,7 @@ width: 40%;
 /*quote section*/
 .quote-section{
   width: 100%;
+  overflow: hidden;
 }
 .quote-background{
   width: 100%;
