--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,6 +3,9 @@ margin: 0;
 padding: 0;
 box-sizing: border-box;
 }
+body{
+  overflow:initial;
+}
 /*titles*/
 .title-section{
 font-size: 40px;
@@ -50,6 +53,7 @@ flex-grow: 2 2;
 flex-direction: column;
 align-items: center;
 background-image: url(/images/firebackground01_adobe_express.svg);
+background-position: center; 
 }
 .presentation-container{
 display: flex;
