--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,7 +4,7 @@ padding: 0;
 box-sizing: border-box;
 }
 body{
-  overflow:initial;
+  overflow: hidden;
 }
 /*titles*/
 .title-section{
@@ -184,11 +184,11 @@ width: 40%;
 }
 /*quote section*/
 .quote-section{
-  width: 100%;
-  overflow: hidden;
+ max-width: 100%;
 }
 .quote-background{
-  width: 100%;
+  overflow: hidden;
+  max-width: 100%;
 }
 .quote-content{
   display: flex;
@@ -200,6 +200,10 @@ width: 40%;
   text-shadow: -4px -4px 4px #000, 4px 4px 4px #000, -4px 4px 4px #000, 4px -4px 4px #000;
   font-family: 'Spicy Rice', cursive;
   font-size: 50px;
+  width:100%;
+}
+.heart-container-absolute{
+  overflow: hidden;
 }
 #heart-container{
   z-index: -100;
@@ -211,6 +215,7 @@ width: 40%;
   align-items: center;
 }
 .heart{
+  width: 100%;
   position: absolute;
   top: -250px;
   left: -10px;
@@ -267,6 +272,7 @@ svg:nth-child(12).heart{
 svg:nth-child(13).heart{
   animation-delay: 3s;
 } 
+
 /*proyects*/
 .projects-box-grid{
   background-color: #9f91ec;
