--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,7 +4,7 @@ padding: 0;
 box-sizing: border-box;
 }
 body{
-  overflow: hidden;
+ overflow-x: hidden;
 }
 /*titles*/
 .title-section{
@@ -52,8 +52,7 @@ display: flex;
 flex-grow: 2 2;
 flex-direction: column;
 align-items: center;
-background-image: url(/images/firebackground01_adobe_express.svg);
-background-position: center; 
+background-color: #fa5639; 
 }
 .presentation-container{
 display: flex;
@@ -187,7 +186,6 @@ width: 40%;
  max-width: 100%;
 }
 .quote-background{
-  overflow: hidden;
   max-width: 100%;
 }
 .quote-content{
@@ -196,14 +194,10 @@ width: 40%;
   text-align: center;
   padding: 50px;
   color: #fff;
-  -webkit-text-stroke: .5px #000;
-  text-shadow: -4px -4px 4px #000, 4px 4px 4px #000, -4px 4px 4px #000, 4px -4px 4px #000;
+  
   font-family: 'Spicy Rice', cursive;
   font-size: 50px;
   width:100%;
-}
-.heart-container-absolute{
-  overflow: hidden;
 }
 #heart-container{
   z-index: -100;
