--- a/styles/styles.css
+++ b/styles/styles.css
@@ -281,20 +281,63 @@ svg:nth-child(13).heart{
   text-align: center;
   padding-bottom: 5%;
 }
-
-
-
+.projects-images{
+  width: 100%;
+}
+.projects-card{
+  padding: 2%;
+}
 .projects-grid{
   display: flex;
+  justify-content: center;
+  width: 100%;
+}
+.projects-container{
+  display: flex;
   flex-wrap: wrap;
+  width: 95%;
   justify-content: center;
 }
 .projects-box{
   border: 1px solid #fff;
+  background-color:#f6f6f6;
   border-radius: 4px; 
-  padding: 25%;
-  width: 80%;
-
+  padding: 2%;
+  margin: 2%;
+  width: 95%;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+@media (min-width: 550px) {
+  .projects-box{ 
+    padding: 2%;
+    width: 46%;
+  }
+  .projects-container{
+    display: flex;
+    flex-wrap: wrap;
+    width: 90%;
+    justify-content: space-between;
+  }
+}
+@media (min-width: 900px) {
+  .projects-container{ 
+    max-width: 1029px;
+  }
+}
+@media (min-width: 1180px) {
+  .projects-box{ 
+    padding: 2%;
+    width: 30%;
+    margin: 1%;
+  }
+  .projects-container{
+    display: flex;
+    flex-wrap: wrap;
+    width: 90%;
+    justify-content: space-between;
+  }
 }
 /*footer*/
 .footer{
