--- a/styles/styles.css
+++ b/styles/styles.css
@@ -52,7 +52,7 @@ display: flex;
 flex-grow: 2 2;
 flex-direction: column;
 align-items: center;
-background-color: #fa5639; 
+background-color: #df7299; 
 }
 .presentation-container{
 display: flex;
@@ -97,13 +97,33 @@ width: 40%;
 .mojo-face{
   width: 100%;
 }
+/*mediaqueries*/
+@media (min-width: 1100px) {
+  .presentation{
+    padding: 120px 20px 80px;
+  }
+  .profile{
+    flex-direction: row;
+    justify-content:space-evenly;
+    padding: 170px 20px 80px;
+  }
+  .presentation-container{
+    width: 40%;
+  }
+  .presentation-imgage{
+    margin-right: 30px;
+  }
+  .mojo-face{
+    width: 90%;
+  }
+}
 /*skills*/
 .mySkills{
   font-size: 60px;
 }
 .habilities,
 .grid-container{
-  background-color: #f7b585;
+  background-color: #74b9e0;
   font-family: 'Sofia', cursive;
 }
 .habilities{
@@ -126,8 +146,8 @@ width: 40%;
 .grid-buttons{
   padding: 30px; 
   margin: 0 3% 3%;
-  background-color:#7963f7;
-  border: 3px solid #998aeed8;
+  background-color:#2e9ad8;
+  border: 3px solid #5aacdb;
   border-radius: 4%;
   display: flex;
   width: 200px;
@@ -162,25 +182,6 @@ width: 40%;
   }
 .greetings-text{
   margin-top: 10px;
-  }
-}
-@media (min-width: 1100px) {
-  .presentation{
-    padding: 120px 20px 80px;
-  }
-  .profile{
-    flex-direction: row;
-    justify-content:space-evenly;
-    padding: 170px 20px 80px;
-  }
-  .presentation-container{
-    width: 40%;
-  }
-  .presentation-imgage{
-    margin-right: 30px;
-  }
-  .mojo-face{
-    width: 90%;
   }
 }
 /*quote section*/
@@ -271,11 +272,12 @@ svg:nth-child(13).heart{
 
 /*proyects*/
 .projects-box-grid{
-  background-color: #9f91ec;
+  background-color: #79c16b;
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 2% 0 5%;
+  font-family: 'Sofia', cursive;
 }
 .project-description-text{
   display: flex;
@@ -283,11 +285,17 @@ svg:nth-child(13).heart{
   text-align: center;
   padding-bottom: 5%;
 }
+.title-section{
+  font-size: 60px;
+}
 .projects-images{
   width: 100%;
 }
 .projects-card{
   padding: 2%;
+  color: #000;
+  font-size: 20px;
+  text-decoration: none;
 }
 .projects-grid{
   display: flex;
@@ -301,7 +309,7 @@ svg:nth-child(13).heart{
   justify-content: center;
 }
 .projects-box{
-  border: 1px solid #fff;
+  border: 4px solid #95cc89;
   border-radius: 2%;
   background-color:#f6f6f6;
   padding: 2%;
