--- a/styles/styles.css
+++ b/styles/styles.css
@@ -424,8 +424,10 @@ label{
 textarea{
   border-radius: 15px;
   border: none;
-  padding: 15%;
+  padding: 2%;
   margin: 0 2%;
+  width: 100%;
+  height: 150px;
 }
 #submit-button{
   margin: 3% 0;
