--- a/styles/styles.css
+++ b/styles/styles.css
@@ -395,13 +395,15 @@ svg:nth-child(13).heart{
   text-decoration: none;
   list-style: none;
   color: #c06109;
-  line-height: 30px;
+  line-height: 45px;
+  align-items: center;
+  display: flex;
 }
 .contact-section-links{
   padding: 20px 10px 0;
 }
 .contact-section-links i{
-  margin-right: 10px;
+  margin-right: 15px;
 }
 #name-request,
 #lastname-request,
@@ -413,7 +415,7 @@ svg:nth-child(13).heart{
   margin: 3% 0;
 }
 input{
-  border: none;
+  border: 1px solid #fff;
   border-radius: 15px;
   padding: 5px 15px;
   margin: 0 2%;
@@ -435,12 +437,37 @@ textarea{
 #submit-field{
   background-color: #c26d1d;
   border-radius: 50px;
+  border: 2px solid #c26d1d;
   padding: 10px 30px;
   color: #fff;
   font-family: 'Spicy Rice', cursive;
   letter-spacing: 1px;
   font-size: 20px;
   margin: 2% 2%;
+}
+/*focus*/
+input:focus,
+textarea:focus
+{
+ outline: transparent;
+ border: 1px solid #c26d1d;
+}
+/*hover*/
+#submit-field:hover{
+  background-color: #ee9f55;
+  border: 1px solid #fff;
+}
+.socialMedia:hover{
+  color: #c06109;
+  margin: 0 -10px 0;
+  line-height: 50px;
+}
+.socialMedia:hover i{
+  background-color: #c06109;
+  color: #f6f6f6;
+  border-radius: 50%;
+  padding: 10px;
+  margin-right: 5px;
 }
 /*mediaqueries*/
 @media (min-width: 500px) {
@@ -453,7 +480,7 @@ textarea{
     width: 50%;
   }
   .contact-section-links i{
-    margin-right: 5px;
+    margin-right: 15px;
   }
   .fields-name-and-lastname{
     display: flex;
@@ -464,6 +491,16 @@ textarea{
   .lastname-field{
     width: 48%;
   }
+  /*hover*/
+#submit-field:hover{
+  background-color: #ee9f55;
+  border: 2px solid #fff;
+}
+.socialMedia:hover{
+  color: #c06109;
+  margin-right: 10px;
+  line-height: 52px;
+}
 }
 @media (min-width: 900px) {
   .contact-form{
@@ -493,10 +530,6 @@ textarea{
   .socialMedia{
     width: 100%;
   }
-  .contact-section-links i{
-    margin-right: 10px;
-    margin-bottom: 15px;
-  }
   #submit-button{
     margin: 5% 0;
   }
@@ -507,9 +540,6 @@ textarea{
   {
     margin: 2% 0;
   }
-  #textare-box-field{
-  
-  }
   .information-section .title-section,
   .form-fields .title-section{
     font-size: 40px;
@@ -517,11 +547,27 @@ textarea{
     margin: 0;
   }
   .contact-section-links i{
-    margin: 15px 10px;
+    margin: 15px 15px;
     font-size: 25px;
   }
   .information-section .description-of-section{
     margin-top: 5%;
+  }
+  #submit-field:hover{
+    background-color: #ee9f55;
+  }
+  .socialMedia:hover{
+    margin: -10px -15px -15px 10px;
+  }
+  .socialMedia:hover .icon-and-list-hover{
+    color: #ee9f55;
+  }
+  .socialMedia:hover i{
+    background-color: #ee9f55;
+    color: #f6f6f6;
+    border-radius: 50%;
+    padding: 10px;
+    margin-left: -5px;
   }
 }
 /*footer*/
@@ -558,6 +604,9 @@ font-size: 22px;
   display: flex;
   text-align: center;
 }
+/*hover*/
+
+/*mediaqueries*/
 @media (min-width: 700px) {
   .links-footer-container{
     display: flex;
