--- a/styles/styles.css
+++ b/styles/styles.css
@@ -38,6 +38,11 @@ text-decoration: none;
 display: flex;
 text-align: center;
 }
+/*hover*/
+.linked:hover{
+  color: #fff;
+  }
+/*mediaqueries*/
 @media (min-width: 1100px) {
  .header{
   display: flex;
@@ -108,6 +113,13 @@ width: 40%;
 .mojo-face{
   width: 100%;
 }
+/*hover*/
+.greetings-button:hover{
+  background-color: #ece78c;
+  border-radius: 50px;
+  padding: 20px 45px;
+  font-size: 35px;
+}
 /*mediaqueries*/
 @media (min-width: 551px) {
   .nickname{
@@ -173,7 +185,7 @@ width: 40%;
   padding: 30px; 
   margin: 0 3% 3%;
   background-color:#2e9ad8;
-  border: 3px solid #2e9ad8;
+  border: 7px solid #2e9ad8;
   color: #025383;
   border-radius: 4%;
   display: flex;
@@ -188,6 +200,13 @@ width: 40%;
 .grid-buttons p{
   margin-bottom: 5px;
   font-size: 20px;
+}
+/*hover*/
+.grid-buttons:hover{
+  border: 7px solid #a2c3d6;
+}
+.grid-buttons:hover p{
+  color: #a2c3d6;
 }
 /*media queries*/
 @media (min-width: 1000px){
@@ -322,7 +341,7 @@ svg:nth-child(13).heart{
   justify-content: center;
 }
 .projects-box{
-  border: 4px solid #fff;
+  border: 7px solid #f6f6f6;
   border-radius: 2%;
   background-color:#f6f6f6;
   padding: 2%;
@@ -331,6 +350,13 @@ svg:nth-child(13).heart{
   display: flex;
   flex-direction: column;
   text-align: center;
+}
+/*hover*/
+.projects-box:hover{
+  border: 7px solid #abeb9e;
+}
+.projects-box:hover a{
+  color: #abeb9e;
 }
 /*media queries*/
 @media (min-width: 550px) {
@@ -455,7 +481,7 @@ textarea:focus
 /*hover*/
 #submit-field:hover{
   background-color: #ee9f55;
-  border: 1px solid #fff;
+  border: 1px solid #ee9f55;
 }
 .socialMedia:hover{
   color: #c06109;
@@ -494,7 +520,7 @@ textarea:focus
   /*hover*/
 #submit-field:hover{
   background-color: #ee9f55;
-  border: 2px solid #fff;
+  border: 2px solid #ee9f55;
 }
 .socialMedia:hover{
   color: #c06109;
@@ -604,8 +630,15 @@ font-size: 22px;
   display: flex;
   text-align: center;
 }
+/*:focus*/
+.footer-items a:focus{
+  color: #fff;
+}
 /*hover*/
-
+.social-media-footer i:hover{
+color: #fff;
+-webkit-text-stroke: .5px #998aeed8;
+}
 /*mediaqueries*/
 @media (min-width: 700px) {
   .links-footer-container{
