--- a/styles/styles.css
+++ b/styles/styles.css
@@ -103,6 +103,7 @@ font-family: 'Spicy Rice', cursive;
   padding: 10px 35px;
   font-size: 25px;
   font-family: 'Galindo', cursive; 
+  text-decoration: none;
 }
 .presentation-imgage{
 margin: 0 0 80px;
